# Olio-ohjelmointi

./: chef.cpp  chef.h
H0_1/: CMakeLists.txt
H0_12/: CMakeLists.txt  main.cpp
H1/: funktiot.h
H2a/: CMakeLists.txt  car.cpp  car.h  main.cpp  rectangle.h  student.cpp
H2b/: CMakeLists.txt  car.cpp  car.h  main.cpp
H3b/: CMakeLists.txt  animal.cpp  animal.h  dog.cpp  dog.h  main.cpp
H4/: CMakeLists.txt  car.cpp  car.h  engine.cpp  engine.h  main.cpp  wheel.cpp  wheel.h
H4/H1/: funktiot.cpp  main.cpp
H4/H2a/: rectangle.cpp  student.h
H4/H3a/: .gitignore  main.cpp
H4/H3b/: animal.cpp  dog.cpp  dog.h
H5/: CMakeLists.txt  ClassA1.cpp  ClassA1.h  ClassA2.cpp  ClassA2.h  ClassB.cpp  ClassB.h  main.cpp
H6a/: H6a.pro  main.cpp  myclass.cpp
H6b/: exampleclass.cpp  exampleclass.h  main.cpp
H7/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Harjoituksia/: CMakeLists.txt  main.cpp
h3a/: CMakeLists.txt
